force-app/main/default/objects/Service__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Detailed description of the service</description>
    <inlineHelpText>Describe what this service includes</inlineHelpText>
</CustomField>