force-app/main/default/objects/Service__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration (Minutes)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
    <description>How long this service typically takes</description>
    <inlineHelpText>Estimated time in minutes to complete this service</inlineHelpText>
</CustomField>