force-app/main/default/objects/Service__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <type>Currency</type>
    <precision>8</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Base price for this service</description>
    <inlineHelpText>Standard price charged for this service</inlineHelpText>
</CustomField>