force-app/main/default/objects/Service__c/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <label>Service Category</label>
    <type>Lookup</type>
    <referenceTo>Service_Category__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <description>Category this service belongs to</description>
    <inlineHelpText>Select the category for this service</inlineHelpText>
</CustomField>