force-app/main/default/objects/Service__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Controls display order within category</description>
    <inlineHelpText>Lower numbers appear first</inlineHelpText>
    <defaultValue>100</defaultValue>
</CustomField>