force-app/main/default/objects/Service__c/listViews/Active_Services.listView-meta.xml
<ListView>
    <fullName>Active_Services</fullName>
    <columns>NAME</columns>
    <columns>Service_Category__c</columns>
    <columns>Price__c</columns>
    <columns>Duration_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Services</label>
</ListView>